Add cache dir for docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   web:
     build: .
     volumes:
-      - cache:/workspace/cache
+      - ./cache:/workspace/cache
     env_file:
       - local.env
     ports:
